2002-12-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AssemblyName.cs: little fix in FullName.

2002-12-07  Sebastien Pouliot <spouliot@videotron.ca>

	* AssemblyName.cs: Added missing methods/interfaces. Fixed some
	code to match the MS Framework.
	* StrongNameKeyPair.cs: Completed the "visible" implementation.
	There must be some internal methods to allow signing with the key.

2002-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* EventInfo.cs: implemented (Add|Remove)EventHandler.

Mon Nov 18 17:52:56 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Assembly.cs: implemented GetManifestResourceStream (Type type,
	* String name).

2002-11-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Assembly.cs: changed name of GetType (string, bool, bool) to
	InternalGetType.

2002-10-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TargetInvocationException.cs: modified default message.

2002-10-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonoProperty.cs:
	* PropertyInfo.cs: fixed bug #31535.

2002-09-27  Martin Baulig  <martin@gnome.org>

	* Assembly.cs (Assembly.GetReferencedAssemblies): Implemented.

2002-09-24  Martin Baulig  <martin@gnome.org>

	* Assembly.cs (MonoDebugger_GetType): New method to get a Type
	from its metadata token.  This should only be used by the debugger.

2002-09-21  Martin Baulig  <martin@gnome.org>

	* Assembly.cs (MonoDebugger_GetLocalTypeFromSignature): New method to
	get the type of a local variable from its signature.  This should only
	be used by the debugger.

2002-09-20  Martin Baulig  <martin@gnome.org>

	* Assembly.cs (MonoDebugger_GetMethod): New method to get a MethodBase
	from its metadata token.  This should only be used by the debugger.

Wed Sep 11 12:50:54 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Binder.cs: more default binder implementation.

	* FieldInfo.cs, MonoField.cs: fixed SetValue () implementation.
	* MonoMethod.cs: use the binder in the Invoke () implementation.